objects/Drawdown__c.object
<CustomObject>
    <customHelpPage>General_Deal_Management</customHelpPage>
    <description>SFA-286 to record client drawdowns as they occur</description>
    <fields>
        <fullName>Account_Bank__c</fullName>
        <label>Account Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Branch__c</fullName>
        <label>Account Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advance_Amount__c</fullName>
        <label>Advance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advance_Date__c</fullName>
        <label>Advance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agent_Notice_Date__c</fullName>
        <label>Agent Notice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <formula>Agreement__r.Agreement_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Drawdowns</relationshipLabel>
        <relationshipName>Drawdowns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Borrower__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>An agreement party linked to the Agreement.</description>
        <inlineHelpText>An agreement party linked to the Agreement.</inlineHelpText>
        <label>Borrower</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Agreement__c</field>
                <operation>equals</operation>
                <valueField>Agreement_Party__c.Agreement__c</valueField>
            </filterItems>
            <filterItems>
                <field>Agreement_Party__c.Deal_Party__r.Party_Type__c</field>
                <operation>equals</operation>
                <value>Borrower</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agreement_Party__c</referenceTo>
        <relationshipLabel>Drawdowns</relationshipLabel>
        <relationshipName>Drawdowns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Utilisation__c</fullName>
        <label>Current Utilisation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_in_Status__c</fullName>
        <formula>TODAY() - DATEVALUE( Status_Change_Stamp__c )</formula>
        <label>Days in Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <formula>Agreement__r.Matter_Deal__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawdown_Amount__c</fullName>
        <label>Drawdown Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drawdown_date__c</fullName>
        <label>Drawdown date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Limit__c</fullName>
        <label>Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facility_Tranche__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility Tranche</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Facility_Tranche__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Facility__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility_Tranche__c</referenceTo>
        <relationshipLabel>Drawdowns</relationshipLabel>
        <relationshipName>Drawdowns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Facility__c.Agreement__c</field>
                <operation>equals</operation>
                <valueField>$Source.Agreement__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Drawdowns</relationshipLabel>
        <relationshipName>Drawdowns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Period__c</fullName>
        <label>Interest Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Type__c</fullName>
        <label>Interest Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JIBAR</fullName>
                </value>
                <value>
                    <fullName>PRIME</fullName>
                </value>
                <value>
                    <fullName>LIBOR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lender_Portion_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lender Portion Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Our_Portion__c</fullName>
        <label>Our Portion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Limit__c</fullName>
        <formula>IF( Facility_Tranche__c != null,  Facility_Tranche__r.Tranche_Limit__c ,  IF( Facility__c != null,  Facility__r.Facility_Limit__c , Agreement__r.Limit__c) )</formula>
        <label>Parent Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Limit_lowest_level__c</fullName>
        <label>Parent Limit (lowest level)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Expected__c</fullName>
        <label>Payment Expected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <formula>Borrower__r.Relationship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SWIFT_ID__c</fullName>
        <label>SWIFT ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Change_Stamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Status Change Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Governance and Documentation Check  Incomplete</fullName>
                    <default>true</default>
                    <label>Governance and Documentation Check  Incomplete</label>
                </value>
                <value>
                    <fullName>Governance and Documentation Check Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supporting_Documentation_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supporting Documentation Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <label>Drawdown</label>
    <listViews>
        <fullName>Drawdown_by_Status_Complete</fullName>
        <columns>NAME</columns>
        <columns>Deal__c</columns>
        <columns>Agreement__c</columns>
        <columns>Relationship__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Governance and Documentation Check Complete</value>
        </filters>
        <label>Drawdown by Status (Complete)</label>
    </listViews>
    <listViews>
        <fullName>Drawdowns_by_Status_Incomplete</fullName>
        <columns>NAME</columns>
        <columns>Deal__c</columns>
        <columns>Relationship__c</columns>
        <columns>Reference__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Governance and Documentation Check  Incomplete</value>
        </filters>
        <label>Drawdowns by Status Incomplete</label>
    </listViews>
    <nameField>
        <label>Drawdown Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drawdowns</pluralLabel>
    <recordTypes>
        <fullName>Drawdown</fullName>
        <active>true</active>
        <label>Drawdown</label>
    </recordTypes>
    <recordTypes>
        <fullName>Drawdown_Agency</fullName>
        <active>true</active>
        <label>Drawdown - Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Drawdown_Cancelled</fullName>
        <active>true</active>
        <label>Drawdown Cancelled</label>
    </recordTypes>
    <recordTypes>
        <fullName>Drawdown_ReadOnly</fullName>
        <active>true</active>
        <label>Drawdown ReadOnly</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Draw_Down_Completed</fullName>
        <active>true</active>
        <description>Please ensure &quot;Supporting Documentation Uploaded&quot; is checked for a completed drawdown.</description>
        <errorConditionFormula>AND(
   ISCHANGED(Status__c),
   ISPICKVAL(Status__c,&quot;Governance and Documentation Check Complete&quot;),
   NOT( Supporting_Documentation_Uploaded__c )
)</errorConditionFormula>
        <errorDisplayField>Supporting_Documentation_Uploaded__c</errorDisplayField>
        <errorMessage>Please ensure &quot;Supporting Documentation Uploaded&quot; is checked for a completed drawdown.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Drawdown_Utilisation</fullName>
        <active>true</active>
        <description>Draw down amount exceeds the  facility limit.</description>
        <errorConditionFormula>(Advance_Amount__c  +  Current_Utilisation__c ) &gt; Facility_Limit__c &amp;&amp;  ISPICKVAL(Status__c ,&apos;Governance and Documentation Check Complete&apos;) &amp;&amp;  RecordType.DeveloperName == &apos;Drawdown&apos; &amp;&amp; !ISPICKVAL( Approval_Status__c, &apos;Approved&apos;)</errorConditionFormula>
        <errorMessage>Approval required. Drawdown Amount cannot exceed the Facility Limit without Approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interest_Period_Validation</fullName>
        <active>true</active>
        <description>Validation Rule to validate that both interest period and interest has been specified</description>
        <errorConditionFormula>OR
(
 AND( ISBLANK(TEXT(Interest_Period__c)), NOT(ISBLANK(Period__c))),
 AND( NOT(ISBLANK(TEXT(Interest_Period__c))), ISBLANK( Period__c ) )
)</errorConditionFormula>
        <errorMessage>Please ensure that the Period is specified when the Interest period is selected.
and the Interest Period is specified when the Period is populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lender_Portion_Approval_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName == &apos;Drawdown_Agency&apos; &amp;&amp;  (ISPICKVAL( Approval_Status__c , &apos;Submitted&apos;) || ISPICKVAL( Approval_Status__c , &apos;Rejected&apos;)) &amp;&amp;  ISPICKVAL(Status__c, &apos;Governance and Documentation Check Complete&apos;)</errorConditionFormula>
        <errorMessage>You are not allowed to complete the Drawdown without the Lender Portions being Approved</errorMessage>
    </validationRules>
</CustomObject>